--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "client": "cd client && npm install && npm run build && npm start",
+    "client": "cd client && npm run build && npm start",
     "server": "cd backend && nodemon server/server.js",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
